# -Sentiment-Analysis-of-Social-Media-Posts

./: .gitignore  DEPLOYMENT_SUCCESS.md  PROJECT_COMPLETE.md  README.md  VSCODE_SETUP.md  dashboard.py  main.py  pyproject.toml  requirements.txt  scheduler.py  scraper.py  setup.py
docs/: GETTING_STARTED.md  IMPROVEMENTS.md  PROJECT_SUMMARY.md
scripts/: analyze_sentiment.py  examples.py  quick_start.py
src/: __init__.py  database.py  sentiment_analyzer.py  social_scraper.py
