[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentiment-analysis-social-media"
version = "1.0.0"
description = "Sentiment Analysis of Social Media Posts using multiple NLP models"
authors = [{name = "adityashm"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "lxml>=4.9.3",
    "pandas>=2.1.4",
    "vaderSentiment>=3.3.2",
    "textblob>=0.17.1",
    "transformers>=4.35.2",
    "torch>=2.1.0",
    "matplotlib>=3.8.2",
    "seaborn>=0.13.0",
    "plotly>=5.18.0",
    "streamlit>=1.29.0",
    "wordcloud>=1.9.3",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "numpy>=1.26.2",
    "tqdm>=4.66.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.setuptools]
packages = ["src"]
